src/objects/Certificate_Program__c.object
<CustomObject>
    <description>Certificate Program requests and approved certifications.</description>
    <fields>
        <fullName>Address_that_Ellis_Act_Eviction_Occurred__c</fullName>
        <label>Address that Ellis Act Eviction Occurred</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Affidavit_of_Continuous_Occupancy__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>By checking this box I declare under penalty of perjury under the laws of the State of California that the foregoing is true and accurate. Any material misrepresentation made on this application will result in the City&apos;s denial of my application.</inlineHelpText>
        <label>Affidavit of Continuous Occupancy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_Signature__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>By checking this box I hereby certify that all statements made in this application are true and made for the purpose of applying for an Ellis Act Housing Preference Certificate through the City and County of San Francisco.</inlineHelpText>
        <label>Application Signature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Status__c</fullName>
        <label>Application Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Yet Submitted</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Additional Information Required</fullName>
                </value>
                <value>
                    <fullName>Pending Final Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Under Appeal</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_you_Disabled__c</fullName>
        <label>Are you Disabled?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>COPP_Ownership_Used__c</fullName>
        <defaultValue>false</defaultValue>
        <label>COP Ownership Used</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COPP_Rental_Used__c</fullName>
        <defaultValue>false</defaultValue>
        <label>COP Rental Used</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COPP_Used_for_Ownership_at__c</fullName>
        <label>COP Used for Ownership at</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>COPP_Used_for_Rental_at__c</fullName>
        <label>COP Used for Rental at</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Certificate_ID__c</fullName>
        <label>Certificate ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Current_Address__c</fullName>
        <label>Current Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_NOI_was_Filed__c</fullName>
        <label>Date NOI was Filed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <formula>Household_Contact__r.Birthdate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Move_In__c</fullName>
        <label>Date of Move In</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Move_Out__c</fullName>
        <label>Date of Move Out</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disclose_Healthcare_Info_5_yrs_up_to__c</fullName>
        <formula>Date_NOI_was_Filed__c</formula>
        <inlineHelpText>Please disclose healthcare information for the 5 year period leading up to (Date of Ellis Act Eviction)</inlineHelpText>
        <label>Disclose Healthcare Info 5 yrs. up to</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Displacement_Address_1__c</fullName>
        <label>Displacement Address 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Displacement_Address_2__c</fullName>
        <label>Displacement Address 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Do_you_have_a_life_threatening_illness__c</fullName>
        <description>Are you suffering from a life-threatening illness?</description>
        <inlineHelpText>Are you suffering from a life-threatening illness?</inlineHelpText>
        <label>Do you have a life-threatening illness?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EAHP_Certificate_Used__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EAHP Certificate Used</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EAHP_Certificate_Used_at__c</fullName>
        <label>EAHP Certificate Used at</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Evening_Phone__c</fullName>
        <label>Evening Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Expiration_Date_for_Existing_Properties__c</fullName>
        <label>Expiration Date for Existing Properties</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date_for_New_Developments__c</fullName>
        <label>Expiration Date for New Developments</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>Household_Contact__r.FirstName &amp; &quot; &quot; &amp; Household_Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Transgender</fullName>
                </value>
                <value>
                    <fullName>Do Not Identify as Female, Male, or Transgender</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gross_Annual_Income__c</fullName>
        <label>Gross Annual Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Health_Insurance_ID__c</fullName>
        <label>Health Insurance ID#</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Healthcare_Disclosure_5_yrs_Pre_Eviction__c</fullName>
        <description>Please disclose healthcare information for the 5 year period leading up to (Date of Ellis Act Eviction)</description>
        <inlineHelpText>Please disclose healthcare information for the 5 year period leading up to (Date of Ellis Act Eviction)</inlineHelpText>
        <label>Healthcare Disclosure 5-yrs Pre-Eviction</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Household_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Household Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Certificate_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Household_Contact__c</fullName>
        <label>Household Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Certificate_Applications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Household_Size__c</fullName>
        <label>Household Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hunters_Point_between_1966_and_1975__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Did you live in Hunters Point between the years of 1966 and 1975?</description>
        <inlineHelpText>Did you live in Hunters Point between the years of 1966 and 1975?</inlineHelpText>
        <label>Hunters Point between 1966 and 1975?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>In_what_year_were_you_displaced_2__c</fullName>
        <label>In what year were you displaced 2</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_what_year_were_you_displaced__c</fullName>
        <label>In what year were you displaced 1</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_the_date_of_tenancy_commenced_on_NOI__c</fullName>
        <description>Is the date your tenancy commenced on the Notice of Intent to Withdraw (NOI) filed by your landlord?</description>
        <inlineHelpText>Is the date your tenancy commenced on the Notice of Intent to Withdraw (NOI) filed by your landlord?</inlineHelpText>
        <label>Is the date of tenancy commenced on NOI?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issuance_Date__c</fullName>
        <label>Issuance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lived_at_displaced_address_for_10_years__c</fullName>
        <description>Have you lived at displaced address for at least 10 years?</description>
        <inlineHelpText>Have you lived at displaced address for at least 10 years?</inlineHelpText>
        <label>Lived at displaced address for 10 years?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lived_at_displaced_address_for_5_years__c</fullName>
        <description>Have you lived at the displaced address for at least 5 years?</description>
        <inlineHelpText>Have you lived at the displaced address for at least 5 years?</inlineHelpText>
        <label>Lived at displaced address for 5 years?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_of_Head_of_HH_when_Displaced_2__c</fullName>
        <label>Name of Head of HH when Displaced 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Name_of_Head_of_Household_when_Displaced__c</fullName>
        <label>Name of Head of Household when Displaced</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Name_of_Health_Insurance_Provider__c</fullName>
        <label>Name of Health Insurance Provider</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Patient__c</fullName>
        <formula>Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name of Patient</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Physician_Releasing_Information__c</fullName>
        <label>Name of Physician Releasing Information</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Address_Information__c</fullName>
        <label>Old Address Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Patient_Birthdate__c</fullName>
        <label>Patient Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Physician_s_Office_Address__c</fullName>
        <label>Physician&apos;s Office Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Physician_s_Phone_Number__c</fullName>
        <label>Physician&apos;s Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_Language__c</fullName>
        <label>Primary Language</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Race_Ethnicity__c</fullName>
        <label>Race/Ethnicity</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_to_Head_of_Household_2__c</fullName>
        <label>Relationship to Head of Household 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_to_Head_of_Household__c</fullName>
        <label>Relationship to Head of Household</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_s_Mailing_Address__c</fullName>
        <formula>Household_Account__r.Mailing_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requester&apos;s Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sexual_Orientation__c</fullName>
        <label>Sexual Orientation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lesbian</fullName>
                </value>
                <value>
                    <fullName>Gay</fullName>
                </value>
                <value>
                    <fullName>Bisexual</fullName>
                </value>
                <value>
                    <fullName>Heterosexual</fullName>
                </value>
                <value>
                    <fullName>I Do Not Identify as Lesbian, Gay, Bisexual, or Heterosexual</fullName>
                </value>
                <value>
                    <fullName>Decline to State</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Social_Security_Number__c</fullName>
        <formula>Household_Contact__r.Social_Security_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Social Security Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submit_Date__c</fullName>
        <label>Submit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Telephone_Number__c</fullName>
        <label>Telephone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Western_Addition_between_1966_and_1975__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Did you live in Western Addition between the years of 1966 and 1975?</description>
        <inlineHelpText>Did you live in Western Addition between the years of 1966 and 1975?</inlineHelpText>
        <label>Western Addition between 1966 and 1975?</label>
        <type>Checkbox</type>
    </fields>
    <label>Certificate Program</label>
    <listViews>
        <fullName>All_Certificates</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Certificate_ID__c</columns>
        <columns>Household_Contact__c</columns>
        <columns>Full_Name__c</columns>
        <columns>Telephone_Number__c</columns>
        <columns>Submit_Date__c</columns>
        <columns>Application_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Certificates</label>
    </listViews>
    <listViews>
        <fullName>COP_Certificates</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Household_Contact__c</columns>
        <columns>Full_Name__c</columns>
        <columns>Telephone_Number__c</columns>
        <columns>Certificate_ID__c</columns>
        <columns>COPP_Ownership_Used__c</columns>
        <columns>COPP_Rental_Used__c</columns>
        <columns>Submit_Date__c</columns>
        <columns>Application_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Certificate_Program__c.COP</value>
        </filters>
        <label>COP Certificates</label>
    </listViews>
    <listViews>
        <fullName>EAHP_Certificates</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Household_Contact__c</columns>
        <columns>Full_Name__c</columns>
        <columns>Telephone_Number__c</columns>
        <columns>Certificate_ID__c</columns>
        <columns>EAHP_Certificate_Used__c</columns>
        <columns>Submit_Date__c</columns>
        <columns>Application_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Certificate_Program__c.EAHP</value>
        </filters>
        <label>EAHP Certificates</label>
    </listViews>
    <nameField>
        <displayFormat>CP-{YY}-{MM}-{0}</displayFormat>
        <label>Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certificate Programs</pluralLabel>
    <recordTypes>
        <fullName>COP</fullName>
        <active>true</active>
        <description>Certificate of Preference (COP) Program Applications and Records</description>
        <label>COP</label>
    </recordTypes>
    <recordTypes>
        <fullName>EAHP</fullName>
        <active>true</active>
        <description>Ellis Act Housing Preference (EAHP) Program Certificate Applications and Records</description>
        <label>EAHP</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>